--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
-  "name": "tstack",
+  "name": "web",
+  "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "check": "biome check --write .",
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "check-types": "turbo check-types",
-    "dev:native": "turbo -F native dev",
-    "dev:web": "turbo -F web dev",
-    "dev:server": "turbo -F server dev",
-    "db:push": "turbo -F server db:push",
-    "db:studio": "turbo -F server db:studio",
-    "db:generate": "turbo -F server db:generate",
-    "db:migrate": "turbo -F server db:migrate"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "biome check && pnpm run typecheck",
+    "format": "biome format --write .",
+    "typecheck": "tsc --noEmit",
+    "db:local": "turso dev --db-file local.db",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
-  "dependencies": {},
+  "dependencies": {
+    "radix-ui": "^1.4.2",
+    "@tanstack/react-form": "^1.12.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
+    "next": "15.3.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.4",
+    "zod": "^4.0.2",
+    "@orpc/tanstack-query": "^1.5.0",
+    "@orpc/client": "^1.5.0",
+    "@orpc/server": "^1.5.0",
+    "@tanstack/react-query": "^5.80.5",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.2",
+    "@libsql/client": "^0.15.9",
+    "better-auth": "^1.3.4"
+  },
   "devDependencies": {
-    "turbo": "^2.5.4",
-    "@biomejs/biome": "^2.1.2"
+    "@biomejs/biome": "2.1.2",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5",
+    "@tanstack/react-query-devtools": "^5.80.5",
+    "zod": "^4.0.13",
+    "drizzle-kit": "^0.31.2"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
